backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywallet-backend-service
spec:
  type: ClusterIP
  selector:
    app: mywallet-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
