backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mywallet-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - apimywallet.rayududev.live
    secretName: mywallet-backend-tls
  rules:
  - host: apimywallet.rayududev.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mywallet-backend-service
            port:
              number: 8080
